[package]
name = "git-config-env"
version = "0.1.1"
description = "Parse git's env configuration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/git-config-env"
readme = "README.md"
categories = ["command-line-interface", "development-tools", "parsing"]
keywords = ["git", "cli"]
edition = "2018"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/epage/git-stack/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
nom = "7"
itertools = "0.10"
